--- a/gad1/templates/gad1/page1.html
+++ b/gad1/templates/gad1/page1.html
@@ -29,7 +29,7 @@ border: 2 px solid white;
 <br>
 <br>
 <br>
-Teacher?
+Professor?
 <input type="radio" class="big" name="profession" value="Teacher" style="font-size:50px">
 <br>
 <br>
