--- a/gad1/templates/gad1/page6.html
+++ b/gad1/templates/gad1/page6.html
@@ -69,7 +69,7 @@ code { font-size:12px; }
   </div>
   <div id="main">
     <div id="content">
-      <p><a href="./page19"><button>View Assignments</button></a></p>
+      <p><a href="./teach2"><button>View Assignments</button></a></p>
       <br>
       <br>
       <p><a href="./page8"><button>Create Assignments</button></a></p>
