--- a/gad1/templates/gad1/page8.html
+++ b/gad1/templates/gad1/page8.html
@@ -23,7 +23,8 @@
  
  <!--{{file.id}}/-->
     
-    {{ form.as_p }}
+    {{ form.as_p|safe }}
+    <!--{{ content|safe }}-->
 <p><input type="submit" value="Enregistrer"/></p>
     
 </form>
