--- a/gad1/templates/gad1/page9.html
+++ b/gad1/templates/gad1/page9.html
@@ -24,8 +24,10 @@
  <!--{{file.id}}/-->
     
     {{ form.as_p }}
-<p><input type="submit" value="Enregistrer"/></p>
+    <input type="number" name="numero" />
+<p><input type="submit" value="Enregistrer" placeholder="SAP ID"/></p>
     
 </form>
+
 </body>
 </html>
